--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -59,6 +59,19 @@ h1 {
   font-family: 'Ubuntu', sans-serif;
 }
 
+#bolos{
+  margin-top: 100px;
+}
+#doces{
+  margin-top: 100px;
+}
+#contato{
+  margin-top: 100px;
+}
+.banner{
+  background-color: #ee9aab;
+  font-family: 'Ubuntu', sans-serif; 
+}
 footer p{
 font-size: 12px;
 font-family: 'Ubuntu', sans-serif;
