--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,9 @@
 @import url("https://fonts.googleapis.com/css?family=Ubuntu");
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
+body{
+  max-width: 1600px; 
+}
 .logo {
   background-image: url("/src/assets/art-artistic-background-1831234.jpg");
 }
